# mb_chatbot

./: README.md  pyproject.toml  voicetest.py
.devcontainer/: devcontainer.json
mb_chatbot/: chat_bot.py  load_transform_data.py
mb_chatbot/data/: expenses_details.csv  metadata.json  metadata.txt  overall.csv
mb_chatbot/ddb/: oildata.db
mb_chatbot/sql/: create_overall_table.sql
