[tool.poetry]
name = "Oil chat"
version = "0.1.0"
description = ""
authors = [
      "Selva <selva@mangogroup.com>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.1.3"
langchain = "^0.3.9"
sqlalchemy = "^2.0.36"
openai = "^1.57.0"
langchain-community = "^0.3.10"
langchain-experimental = "^0.3.3"
duckdb-engine = "^0.13.6"
transformers = "^4.47.0"
accelerate = "^1.2.0"
streamlit = "^1.41.0"
plotly = "^5.24.1"
autoviz = "^0.1.905"
ipython = "^8.30.0"
sweetviz = "^2.3.1"
speechrecognition = "^3.14.1"
gtts = "^2.5.4"
pydub = "^0.25.1"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
